# Dynamics_identification_Frank

./: .gitignore  CMakeLists.txt  MANIFEST.txt  README.md
03 控制系统/xCoreSDK_cpp-v0.5.1/example/rt/: torque_control.cpp
03_control_system/xCoreSDK_cpp-v0.5.1/dynamics_identification_archive_20260120/build_outputs/: dynamics_parameters_urdf.csv  dynamics_physical_parameters_identified.txt
03_control_system/xCoreSDK_cpp-v0.5.1/dynamics_identification_archive_20260120/docs/: pinocchio_dual_arm_dynamics.tex  pinocchio_dynamics_identification.tex  pinocchio_kinematic_identification.tex
build_outputs/: .~lock.compare_Y_all_compare.csv#  AR5-5_07R-W4C4A2_identified.urdf  AR5-5_07R-W4C4A2_identified_inertia_com.urdf  AR5-5_07R-W4C4A2_identified_inertia_joint_origin.urdf  AR5-5_07R-W4C4A2_identified_joint.urdf  compare_Y_input_diff.csv  compare_Y_summary.txt  dynamics_identification_data copy.csv  dynamics_identification_results.txt  dynamics_parameters.csv  dynamics_parameters_friction.csv  dynamics_parameters_ls.csv  dynamics_physical_parameters.txt  dynamics_physical_parameters_identified.txt
docs/: 01-动力学参数辨识QP方案.tex  02-step2动力学参数辨识程序说明.tex  03-惯性参考点与质心惯量转换.tex  04-Y_all输入一致与回归矩阵差异说明.tex  05-step2动力学参数辨识Python版公式与运行原理.tex  06-URDF与Pinocchio惯量绕质心约定.tex  07-刚性部分与刚性差.tex  08-MuJoCo逆动力学使用与Mddq分解.tex  dynamic_parameters_10d_conversion.md  mj_inverse行为测试报告.md  pinocchio_dynamics.tex
scripts/: README.md  compare_Y_input_and_diff.py  compare_tau_csv_urdf.py  dynamics_identification_data_pinocchio_rnea.csv  dynamics_identification_data_pinocchio_zero_friction.csv  plot_identification_comparison.py  requirements.txt  step1_2_compare_tau_inverse_dynamics.py  step1_mujoco_dynamics_data_collection.py  step2_dynamics_parameter_estimation.py  step2_dynamics_parameter_estimation_friction.py  step2_dynamics_parameter_estimation_friction_main.py  step2_dynamics_parameter_estimation_friction_noQP.py  step2_dynamics_parameter_estimation_friction_sdp copy.py  step2_dynamics_parameter_estimation_friction_sdp.py  step2_identify_base_params.py  step2_identify_friction_mass_com.py  step2_identify_friction_only.py  step2_identify_mass_com_only.py  step2_identify_mass_friction_only.py  step2_identify_partial_links.py  step2_partial_common.py  urdf_normalize_inertia_frame.py
scripts/AR5-5_07R-W4C4A2/: AR5-5_07R-W4C4A2.urdf  AR5-5_07R-W4C4A2.xml  AR5-5_07R-W4C4A2_.xml
scripts/data_output/: AR5-5_07R-W4C4A2_identified_friction_mass_com.urdf  AR5-5_07R-W4C4A2_identified_friction_only.urdf  AR5-5_07R-W4C4A2_identified_inertia_com_friction.urdf  AR5-5_07R-W4C4A2_identified_mass_com_only.urdf  AR5-5_07R-W4C4A2_identified_mass_friction_only.urdf  Y_input_py.csv  compare_tau_dynamics_identification_data.csv  compare_tau_dynamics_identification_data.txt  dynamics_identification_results.txt  dynamics_parameters.csv  dynamics_parameters_friction.csv  dynamics_parameters_ls.csv  dynamics_physical_parameters_identified.txt
src/: CMakeLists_rt.txt  dynamics_data_collection.cpp  dynamics_parameter_estimation.cpp  step0_dh_to_urdf.py  step0_mdh_to_urdf.py  step1_dynamics_data_collection.cpp  step1_dynamics_data_collection_joint.cpp  step2.2_dynamics_parameter_estimation_joint.cpp  step2_dynamics_parameter_estimation.cpp  step3_torque_comparison_identified_urdf.cpp  step4_torque_hold_identified_urdf.cpp
src/config/: dynamics_identification_data.csv  dynamics_identification_data_real.csv  step2_dynamics_parameter_estimation.yaml  step4_torque_hold.yaml  step6_wbc_osqp_ee_position.yaml
urdf/: AR5-5_07R-W4C4A2_ Manual_fix.urdf  AR5-5_07R-W4C4A2_identified.urdf  AR5-5_07R-W4C4A2_identified_joint.urdf
(+4 files in other folders)
